{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "PlayerInput",
            "id": "17a6e189-ade8-4a3a-9d5d-94745c587204",
            "actions": [
                {
                    "name": "PunchLeft",
                    "type": "Button",
                    "id": "d90867c8-4f53-430b-954a-3c35364d6803",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PunchRight",
                    "type": "Button",
                    "id": "265b55ba-8e04-491d-a743-34fe9b22348a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PunchStraight",
                    "type": "Button",
                    "id": "af0e743e-eaf3-4083-8617-88470cc907ea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b7bef75f-36e0-4539-991b-4731d5ce6277",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dbc9b98-1c0b-4ca3-9c86-4aa34fc2a5cf",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d09bc948-1015-46f2-9c58-4624f3cd87b7",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PunchStraight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}